Include reset/no reset llr_scores function.

--- a/README.Rmd
+++ b/README.Rmd
@@ -30,13 +30,13 @@ An R-package which contains functions to set up risk-adjusted quality control ch
 
 ## Installation
 
-You can install the released version of **vlad** from [CRAN](https://CRAN.R-project.org) with:
+You can install the released version of **vlad** from [CRAN](https://cran.r-project.org/web/packages/vlad/index.html) with:
 
 ``` r
 install.packages("vlad")
 ```
 
-And the development version from [GitHub](https://github.com/) with:
+And the development version from [GitHub](https://github.com/wittenberg/vlad) with:
 
 ``` r
 # install.packages("devtools")
