--- a/README.Rmd
+++ b/README.Rmd
@@ -23,6 +23,7 @@ An R-package which contains functions to set up risk-adjusted quality control ch
 
 ## Main features
 
+- Risk-adjusted CUSUM chart control limit calculatons based on fast and accurate Markov chain approximations
 - Risk-adjusted CUSUM chart based on E-O by Wittenberg et al. (2018)
 - Risk-adjusted CUSUM chart based on log-likelihood ratio statistic by Steiner et al. (2000)
 - Algorithms are implemented using Rcpp and RcppArmadillo
@@ -128,6 +129,8 @@ devtools::install_github("wittenberg/vlad")
 <!-- ``` -->
 
 ### References
+
+Knoth et al. (2019). [Risk-adjusted CUSUM charts under model error](https://doi.org/10.1002/sim.8104)
 
 Wittenberg et al. (2018). [A simple signaling rule for variable life-adjusted display derived from an equivalent risk-adjusted CUSUM chart](https://doi.org/10.1002/sim.7647)
 
