--- a/README.Rmd
+++ b/README.Rmd
@@ -37,7 +37,7 @@ You can install the released version of **vlad** from [CRAN](https://cran.r-proj
 install.packages("vlad")
 ```
 
-or install the development version from [GitHub](https://github.com/wittenberg/vlad) with:
+You can install the development version from [GitHub](https://github.com/wittenberg/vlad) with:
 
 ``` r
 # install.packages("devtools")
