--- a/README.Rmd
+++ b/README.Rmd
@@ -26,8 +26,7 @@ An R-package which contains functions to set up risk-adjusted quality control ch
 - Risk-adjusted CUSUM chart control limit calculations based on fast and accurate Markov chain approximations (Knoth et al. 2019)
 - Risk-adjusted CUSUM chart based on E-O (Wittenberg et al. 2018)
 - Risk-adjusted CUSUM chart based on log-likelihood ratio statistic (Steiner et al. 2000)
-- Algorithms are implemented using Rcpp and RcppArmadillo
-- High performance with parallel computation
+- Algorithms are implemented using Rcpp, RcppArmadillo and parallel computation
 
 ## Installation
 
@@ -140,13 +139,16 @@ You can then install the package via *devtools::install_github("wittenberg/vlad"
 
 ### References
 
-Knoth S, Wittenberg P and Gan FF (2019). [Risk-adjusted CUSUM charts under model error](https://doi.org/10.1002/sim.8104). _Statistics in Medicine_, **38**(12), pp. 2206--2218.
+Knoth S, Wittenberg P and Gan FF (2019). Risk-adjusted CUSUM charts under model error. _Statistics in Medicine_, **38**(12), pp. 2206--2218.
+doi: [10.1002/sim.8104](https://doi.org/10.1002/sim.8104)
 
-Wittenberg P, Gan FF, Knoth S (2018). [A simple signaling rule for variable life-adjusted display derived from an equivalent risk-adjusted CUSUM chart](https://doi.org/10.1002/sim.7647).
+Wittenberg P, Gan FF, Knoth S (2018). A simple signaling rule for variable life-adjusted display derived from an equivalent risk-adjusted CUSUM chart.
 _Statistics in Medicine_, **37**(16), pp 2455--2473.
+doi: [10.1002/sim.7647](https://doi.org/10.1002/sim.7647)
 
-Steiner SH, Cook RJ, Farewell VT and Treasure T (2000). [Monitoring surgical performance using risk-adjusted cumulative sum charts](https://doi.org/10.1093/biostatistics/1.4.441). 
+Steiner SH, Cook RJ, Farewell VT and Treasure T (2000). Monitoring surgical performance using risk-adjusted cumulative sum charts.
 _Biostatistics_, **1**(4), pp. 441--452.
+doi: [10.1093/biostatistics/1.4.441](https://doi.org/10.1093/biostatistics/1.4.441)
 
 ### Authors
 
