Start testing again.

--- a/vignettes/VLAD.bib
+++ b/vignettes/VLAD.bib
@@ -1,7 +1,39 @@
 % Encoding: UTF-8
 
+@Article{Knoth.etal_2019,
+  author    = {S Knoth and P Wittenberg and FF Gan},
+  title     = {Risk-adjusted {CUSUM} charts under model error},
+  journal   = {Statistics in Medicine},
+  year      = {2019},
+  volume    = {38},
+  number    = {12},
+  pages     = {2206--2218},
+  doi       = {10.1002/sim.8104},
+  file      = {:Knoth.etal_2019.pdf:PDF},
+  keywords  = {SPCHealth},
+  owner     = {pwitten},
+  timestamp = {2019-04-30},
+}
+
+@Article{Wittenberg.etal_2018,
+  author    = {P Wittenberg and FF Gan and S Knoth},
+  title     = {A simple signaling rule for variable life-adjusted display derived from an equivalent risk-adjusted {CUSUM} chart},
+  journal   = {Statistics in Medicine},
+  year      = {2018},
+  volume    = {37},
+  number    = {16},
+  pages     = {2455--2473},
+  month     = {apr},
+  doi       = {10.1002/sim.7647},
+  file      = {:Wittenberg.etal_2018.pdf:PDF},
+  groups    = {[pwitten:]},
+  keywords  = {SPCHealth},
+  owner     = {pwitten},
+  timestamp = {2019-05-14},
+}
+
 @Article{Steiner.etal_2000,
-  author    = {S. H. Steiner and Richard J. Cook and Vern T. Farewell and Tom Treasure},
+  author    = {SH Steiner and RJ Cook and VT Farewell and T Treasure},
   title     = {Monitoring surgical performance using risk-adjusted cumulative sum charts},
   journal   = {Biostatistics},
   year      = {2000},
@@ -11,23 +43,8 @@
   doi       = {10.1093/biostatistics/1.4.441},
   file      = {:Steiner.etal_2000.pdf:PDF},
   keywords  = {VLAD, Delta, SPCHealth},
-  owner     = {pwitten},
-  timestamp = {2019-02-05},
-}
-
-@Article{Wittenberg.etal_2018,
-  author    = {Philipp Wittenberg and Fah Fatt Gan and Sven Knoth},
-  title     = {A simple signaling rule for variable life-adjusted display derived from an equivalent risk-adjusted {CUSUM} chart},
-  journal   = {Statistics in Medicine},
-  year      = {2018},
-  volume    = {37},
-  number    = {16},
-  pages     = {2455--2473},
-  doi       = {10.1002/sim.7647},
-  file      = {:Wittenberg.etal_2018.pdf:PDF},
-  keywords  = {SPCHealth},
-  owner     = {pwitten},
-  timestamp = {2019-02-05},
+  owner     = {jsbach},
+  timestamp = {2019.11.01},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
