--- a/README.Rmd
+++ b/README.Rmd
@@ -1,6 +1,6 @@
 ---
 output: github_document
-bibliography: vignettes/VLAD.bib
+bibliography: inst/VLAD.bib
 pandoc_args: [ "--csl", "vignettes/ims.csl" ]
 biblio-style: plain
 link-citations: true
