Prepare for CRAN.

--- a/README.Rmd
+++ b/README.Rmd
@@ -35,7 +35,8 @@ An R-package which contains functions to set up risk-adjusted quality control ch
 
 ## Installation
 
-You can install the released version of **vlad** from [CRAN](https://cran.r-project.org/web/packages/vlad/index.html) with:
+You can install the released version of **vlad** from
+[CRAN](https://CRAN.R-project.org/package=vlad) with:
 
 ``` r
 install.packages("vlad")
