--- a/README.Rmd
+++ b/README.Rmd
@@ -59,7 +59,7 @@ You can then install the package via *devtools::install_github("wittenberg/vlad"
 
 ## Examples
 
-[Supplemental material: Risk-adjusted CUSUM charts under model error](https://onlinelibrary.wiley.com/action/downloadSupplement?doi=10.1002%2Fsim.8104&file=SIM_8104-Supp-0001-Supplemental-material-SIM-18-0571.R)
+[Supplemental material: Risk-adjusted CUSUM charts under model error](https://raw.githubusercontent.com/wittenberg/vlad/master/man/examples/Supplemental-material-SIM-18-0571.R)
 
 <!-- Load libraries: -->
 <!-- ```{r load libraries, message=FALSE} -->
